gccida/g1/dbxout_finish_symbol
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dbxout_finish_symbol/src/dbxout.c:2878:20: error: use of undeclared identifier 'off_6376D2'
fprintf( asmfile, &off_6376D2[1], ( unsigned int)current_sym_value); 
                   ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dbxout_finish_symbol/src/obj/dbxout.o] Error 1
